--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     margin: var(--margin-small);
     background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    min-width: 96%;
 }
 
 .exercise {
